# elementoerp

./: .gitignore  README.md  docker-compose.yml
config/: odoo.conf
myaddons/account-analytic-18.0/: .copier-answers.yml  README.md
myaddons/account-analytic-18.0/account_analytic_parent/: README.rst
myaddons/account-analytic-18.0/account_analytic_tag/: README.rst  __manifest__.py
myaddons/account-analytic-18.0/analytic_base_department/: README.rst  __manifest__.py
myaddons/account-analytic-18.0/hr_timesheet_analytic_tag/: README.rst  __manifest__.py
myaddons/account-analytic-18.0/pos_analytic_by_config/: README.rst  __manifest__.py
myaddons/account-analytic-18.0/purchase_analytic/: README.rst  __manifest__.py
myaddons/account-analytic-18.0/setup/_metapackage/: pyproject.toml
myaddons/account-analytic-18.0/stock_analytic/: README.rst  __manifest__.py
myaddons/account-financial-reporting-18.0/: .copier-answers.yml  README.md
myaddons/account-financial-reporting-18.0/account_financial_report/: README.rst  __manifest__.py
myaddons/account-financial-reporting-18.0/account_tax_balance/: README.rst  __manifest__.py
myaddons/account-financial-reporting-18.0/setup/_metapackage/: pyproject.toml
myaddons/account-financial-tools-18.0/: .copier-answers.yml  .pre-commit-config-autofix.yaml  .pre-commit-config-optional.yaml  .pylintrc-optional  README.md
myaddons/account-financial-tools-18.0/account_asset_management/: README.rst  __manifest__.py
myaddons/account-financial-tools-18.0/account_cash_deposit/: README.rst  __manifest__.py
myaddons/account-financial-tools-18.0/account_fiscal_position_vat_check/: README.rst  __manifest__.py
myaddons/account-financial-tools-18.0/account_fiscal_year/: README.rst  __manifest__.py
myaddons/account-financial-tools-18.0/account_journal_restrict_mode/: README.rst  __manifest__.py  hooks.py
myaddons/account-financial-tools-18.0/account_lock_date_update/: README.rst  __manifest__.py
myaddons/account-financial-tools-18.0/account_move_fiscal_year/: README.rst  __manifest__.py
myaddons/account-financial-tools-18.0/account_move_line_purchase_info/: README.rst  __manifest__.py
myaddons/account-financial-tools-18.0/account_move_line_sale_info/: README.rst  __manifest__.py
myaddons/account-financial-tools-18.0/account_move_name_sequence/: README.rst  hooks.py
myaddons/account-financial-tools-18.0/account_move_post_date_user/: README.rst  __manifest__.py
myaddons/account-financial-tools-18.0/account_usability/: README.rst  __manifest__.py
myaddons/account-financial-tools-18.0/setup/_metapackage/: pyproject.toml
myaddons/account-invoicing-18.0/: .copier-answers.yml  README.md
myaddons/account-invoicing-18.0/account_invoice_fiscal_position_update/: README.rst  __manifest__.py
myaddons/account-invoicing-18.0/account_invoice_fixed_discount/: README.rst  __manifest__.py
myaddons/account-invoicing-18.0/account_invoice_show_currency_rate/: README.rst  __manifest__.py
myaddons/account-invoicing-18.0/account_invoice_supplier_ref_unique/: README.rst  __manifest__.py
myaddons/account-invoicing-18.0/account_mail_autosubscribe/: README.rst  __manifest__.py
myaddons/account-invoicing-18.0/account_move_cancel_confirm/: README.rst  __manifest__.py
myaddons/account-invoicing-18.0/partner_invoicing_mode/: README.rst  __manifest__.py
myaddons/account-invoicing-18.0/partner_invoicing_mode_monthly/: README.rst  __manifest__.py
myaddons/account-invoicing-18.0/product_form_account_move_line_link/: README.rst  __manifest__.py
myaddons/account-invoicing-18.0/purchase_stock_picking_return_invoicing/: README.rst  __manifest__.py
myaddons/account-invoicing-18.0/sale_order_invoicing_grouping_criteria/: README.rst
myaddons/account-invoicing-18.0/setup/_metapackage/: pyproject.toml
myaddons/account-invoicing-18.0/stock_picking_return_refund_option/: README.rst  __manifest__.py
myaddons/account-reconcile-18.0/: README.md
myaddons/account-reconcile-18.0/account_reconcile_model_oca/: README.rst  __manifest__.py
myaddons/account-reconcile-18.0/account_reconcile_oca/: README.rst  __manifest__.py
myaddons/bank-statement-import-18.0/: .copier-answers.yml  README.md
myaddons/bank-statement-import-18.0/account_statement_import_ofx/: README.rst  __manifest__.py
myaddons/bank-statement-import-18.0/account_statement_import_online/: README.rst  __manifest__.py
myaddons/bank-statement-import-18.0/setup/_metapackage/: pyproject.toml
myaddons/currency-18.0/: .copier-answers.yml  README.md
myaddons/currency-18.0/currency_rate_update/: README.rst  __manifest__.py
myaddons/cysbros/account-financial-tools/: .copier-answers.yml  .pre-commit-config.yaml  .ruff.toml  README.md
myaddons/cysbros/base_accounting_kit/: __manifest__.py
myaddons/l10n-mexico-17.0/: .copier-answers.yml  .pre-commit-config.yaml  README.md
myaddons/l10n-mexico-17.0/currency_rate_update_banxico/: README.rst  __manifest__.py
myaddons/l10n-mexico-17.0/l10n_mx_catalogs/: README.rst  __manifest__.py
myaddons/l10n-mexico-17.0/setup/_metapackage/: pyproject.toml
myaddons/margin-analysis-18.0/: .copier-answers.yml  README.md
myaddons/margin-analysis-18.0/sale_margin_delivered/: README.rst  __manifest__.py
myaddons/margin-analysis-18.0/sale_margin_security/: README.rst  __manifest__.py
myaddons/margin-analysis-18.0/sale_margin_sync/: README.rst  __manifest__.py
myaddons/margin-analysis-18.0/sale_report_margin/: README.rst  __manifest__.py
myaddons/margin-analysis-18.0/setup/_metapackage/: pyproject.toml
myaddons/reporting-engine-18.0/: .copier-answers.yml  README.md
myaddons/reporting-engine-18.0/base_comment_template/: README.rst  __manifest__.py
myaddons/reporting-engine-18.0/report_qweb_element_page_visibility/: README.rst  __manifest__.py
myaddons/reporting-engine-18.0/setup/_metapackage/: pyproject.toml
myaddons/server-ux-18.0/: .copier-answers.yml
myaddons/sign-18.0/: .copier-answers.yml  README.md
myaddons/web-18.0/: .copier-answers.yml  README.md
myaddons/web-18.0/setup/_metapackage/: pyproject.toml
(+1449 files in other folders)
