[project]
name = "odoo-addons-oca-account-financial-tools"
version = "18.0.20250331.0"
dependencies = [
    "odoo-addon-account_asset_management==18.0.*",
    "odoo-addon-account_cash_deposit==18.0.*",
    "odoo-addon-account_fiscal_position_vat_check==18.0.*",
    "odoo-addon-account_fiscal_year==18.0.*",
    "odoo-addon-account_journal_restrict_mode==18.0.*",
    "odoo-addon-account_lock_date_update==18.0.*",
    "odoo-addon-account_move_fiscal_year==18.0.*",
    "odoo-addon-account_move_line_purchase_info==18.0.*",
    "odoo-addon-account_move_line_sale_info==18.0.*",
    "odoo-addon-account_move_name_sequence==18.0.*",
    "odoo-addon-account_move_post_date_user==18.0.*",
    "odoo-addon-account_usability==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
