[project]
name = "odoo-addons-oca-account-invoicing"
version = "18.0.20250326.0"
dependencies = [
    "odoo-addon-account_invoice_fiscal_position_update==18.0.*",
    "odoo-addon-account_invoice_fixed_discount==18.0.*",
    "odoo-addon-account_invoice_refund_link==18.0.*",
    "odoo-addon-account_invoice_show_currency_rate==18.0.*",
    "odoo-addon-account_invoice_supplier_ref_unique==18.0.*",
    "odoo-addon-account_mail_autosubscribe==18.0.*",
    "odoo-addon-account_move_cancel_confirm==18.0.*",
    "odoo-addon-partner_invoicing_mode==18.0.*",
    "odoo-addon-partner_invoicing_mode_monthly==18.0.*",
    "odoo-addon-product_form_account_move_line_link==18.0.*",
    "odoo-addon-purchase_stock_picking_return_invoicing==18.0.*",
    "odoo-addon-sale_order_invoicing_grouping_criteria==18.0.*",
    "odoo-addon-stock_picking_return_refund_option==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
