[project]
name = "odoo-addons-oca-l10n-mexico"
version = "18.0.1.0.1"
dependencies = [
    "odoo-addon-currency_rate_update_banxico>=17.0dev,<17.1dev",
    "odoo-addon-l10n_mx_catalogs>=17.0dev,<17.1dev",
    "odoo-addon-l10n_mx_cfdi>=17.0dev,<17.1dev",
    "odoo-addon-l10n_mx_cfdi_account>=17.0dev,<17.1dev",
    "odoo-addon-l10n_mx_res_partner_csf>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
