[project]
name = "odoo-addons-oca-web"
version = "18.0.20250321.0"
dependencies = [
    "odoo-addon-web_chatter_position==18.0.*",
    "odoo-addon-web_company_color==18.0.*",
    "odoo-addon-web_dialog_size==18.0.*",
    "odoo-addon-web_disable_export_group==18.0.*",
    "odoo-addon-web_environment_ribbon==18.0.*",
    "odoo-addon-web_favicon==18.0.*",
    "odoo-addon-web_no_bubble==18.0.*",
    "odoo-addon-web_notify==18.0.*",
    "odoo-addon-web_notify_channel_message==18.0.*",
    "odoo-addon-web_pivot_computed_measure==18.0.*",
    "odoo-addon-web_search_with_and==18.0.*",
    "odoo-addon-web_tree_dynamic_colored_field==18.0.*",
    "odoo-addon-web_tree_many2one_clickable==18.0.*",
    "odoo-addon-web_widget_bokeh_chart==18.0.*",
    "odoo-addon-web_widget_dropdown_dynamic==18.0.*",
    "odoo-addon-web_widget_numeric_step==18.0.*",
    "odoo-addon-web_widget_x2many_2d_matrix==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
